[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt_streamgrabber"
version = "0.0.1"
authors = [{ name="Oren Halvani" }]
description = "YT_StreamGrabber is a small tool that allows to download arbitrary audio/video streams from YT in a convenient way."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"clipboard==0.0.4",
"pytube==15.0.0",
"tqdm==4.66.2"
]

[project.urls]
"Homepage" = "https://github.com/Halvani/YT_StreamGrabber"
"Bug Tracker" = "https://github.com/Halvani/YT_StreamGrabber/issues"